modules/network/internet_gateway.tf
# インターネットゲートウェイを定義しVPCに割り当てる
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.vpc.id
}
